[package]
name = "rumm"
version = "0.1.0"
authors = ["Thierry Arnoux"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
logos = "0.12.0"
chrono = "0.4"
colored = "2"
simple_logger = "1.13.0"
# metamath-knife = { path = "../../metamath-knife" }
# metamath-knife = { git = "https://github.com/david-a-wheeler/metamath-knife", tag="v0.3.6"}
metamath-knife = { git = "https://github.com/david-a-wheeler/metamath-knife", rev="fd40179"}
